--- a/theme.css
+++ b/theme.css
@@ -6,7 +6,7 @@
     --guildchanneltransparency: 0.5;
     --memberlistransparency: 0.4;
     --accentcolor: 69,221,255;
-    --background: url("https://raw.githubusercontent.com/DanArea/EditSamsungAssistang-girl-/main/Sambackground2.jpg");
+    --background: url("https://cdn.discordapp.com/attachments/850825103703932938/850861251650781234/Sambackground2.jpg");
     --backdrop: rgba(0,0,0,0.2);
     --backgroundblur: 0px;
     --popoutblur: 0px;
